PLACEHOLDER for basic block determination, jumpdest verification
Macro for selectors working.  Prints analyzed assembly. Command line
flags for various optional outputs.  Finding VT internal tree nodes.
Finding VT Start/Fail nodes.

Selector vtable can be complex, see 968267.  It's some kind of tree.

TODO: Should still replace analysis results from List<Code> to List<Edits>.
TODO: Added selector fetch, which works.  Need to put it into analyze.
TODO: Move much stuff from decompilecontractcommand into Assembly.

Signed-off-by: David Bakin <117694041+david-bakin-sl@users.noreply.github.com>